macro-template/tests/ui/err/mixed_range_bounds.stderr
error: range bounds must both be integer literals, both byte literals, or both character literals
 --> tests/ui/err/mixed_range_bounds.rs:5:18
  |
5 |         for N in 'a'..=3 {
  |                  ^^^^^^^
