macro-template/tests/ui/err/mixed_range_bounds.rs
use macro_template::template;

fn main() {
    template! {
        for N in 'a'..=3 {
            let _ = N;
        }
    }
}
